// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middleware if it does not match a route it should return all subroutes 1`] = `
"Welcome to my greeting API
	

[GET]:/greeting/:name - Returns a greeting
	

[POST]:/greeting - Creates a greeting
    
      body: 
        name: <string>
        langauge: <string> default english
	
"
`;

exports[`middleware returns help message with ?h 1`] = `
"Returns a greeting
	    params:
      name: A word that would would like to be called by
"
`;

exports[`middleware returns help message with ?help 1`] = `
"Returns a greeting
	    params:
      name: A word that would would like to be called by
"
`;

exports[`middleware works with post 1`] = `
"Creates a greeting
    
      body: 
        name: <string>
        langauge: <string> default english
	
"
`;
